# team4

./: .gitignore  .gitmodules  test.p  test.txt  test1.json  test2.json
applications/: CMakeLists.txt  package.xml
applications/config/: navigation.rviz
applications/item_picker/: item_picker.py
applications/launch/: nav_rviz.launch
applications/scripts/: ProgByDemon.py  arm_obstacle_demo.py  auto_picker.py  base_demo.py  bin_marker_cropper.py  cart_arm_demo.py  check_cart_pose.py  config.txt  ee_pose_demo.py  gripper_teleop_demo.py  hallucinated_reach.py  head_demo.py  interactive_marker_demo.py  joint_reader_demo.py  lab26_obstacles.py  marker.py  marker_demo.py  mrigank_demo  old_head_demo.py  path_tracker.py  poses.json  pregrasp_demo.py  publish_saved_cloud.py  push_in  speech_recog.py  torso_demo.py  transformation_demo.py
course_setup/: install_cse481c.bash
cse481sp22/map_annotator/: CMakeLists.txt
map_annotator/: package.xml
map_annotator/frontend/: pose_data.pkl
map_annotator/launch/: map_annotator.launch
map_annotator/nodes/: backend.py  lab17.py  marker.py
perception/: CMakeLists.txt  package.xml
perception/data/: pill_bottle_2_label.bag  pill_bottle_label.bag  pill_box_2_label.bag  pill_box_v5_label.bag  pill_box_v6_label.bag
perception/launch/: point_cloud_demo.launch  set_shelf.launch
perception/src/: crop.cpp  downsample.cpp  extract_features_main.cpp  feature_extraction.cpp  item_detector.cpp  object_recognizer.cpp  point_cloud_demo.cpp  (+3 more)
perception_msgs/: CMakeLists.txt  package.xml
web_teleop/: CMakeLists.txt  package.xml
(+28 files in other folders)
